--- a/Google_Cloud_Natural_Language_API.ipynb
+++ b/Google_Cloud_Natural_Language_API.ipynb
@@ -8,6 +8,8 @@
    },
    "outputs": [],
    "source": [
+    "# if you don't have it already: $ pip install --upgrade google-api-python-client"
+    "# also follow [1. a-g] here: https://developers.google.com/identity/protocols/application-default-credentials#howtheywork"
     "from googleapiclient import discovery\n",
     "import httplib2\n",
     "from oauth2client.client import GoogleCredentials\n",
